@@ -21,6 +21,20 @@
 <http://a/> <http://www.w3.org/2002/07/owl#sameAs> <http://a/> .
 <http://a/> <http://www.w3.org/2002/07/owl#sameAs> <http://a/> .
 <http://a/g> <http://www.w3.org/2002/07/owl#sameAs> <http://a/g> .
+<http://a/g> <http://www.w3.org/2002/07/owl#sameAs> <http://a/g> .
+<http://a/g> <http://www.w3.org/2002/07/owl#sameAs> <http://a/g> .
+<http://a/g> <http://www.w3.org/2002/07/owl#sameAs> <http://a/g> .
+<http://a/g> <http://www.w3.org/2002/07/owl#sameAs> <http://a/g> .
+<http://a/b/c/g.> <http://www.w3.org/2002/07/owl#sameAs> <http://a/b/c/g.> .
+<http://a/b/c/.g> <http://www.w3.org/2002/07/owl#sameAs> <http://a/b/c/.g> .
+<http://a/b/c/g..> <http://www.w3.org/2002/07/owl#sameAs> <http://a/b/c/g..> .
+<http://a/b/c/..g> <http://www.w3.org/2002/07/owl#sameAs> <http://a/b/c/..g> .
+<http://a/b/g> <http://www.w3.org/2002/07/owl#sameAs> <http://a/b/g> .
+<http://a/b/c/g?y/./x> <http://www.w3.org/2002/07/owl#sameAs> <http://a/b/c/g?y/./x> .
+<http://a/b/c/g?y/../x> <http://www.w3.org/2002/07/owl#sameAs> <http://a/b/c/g?y/../x> .
+<http://a/b/c/g#s/./x> <http://www.w3.org/2002/07/owl#sameAs> <http://a/b/c/g#s/./x> .
+<http://a/b/c/g#s/../x> <http://www.w3.org/2002/07/owl#sameAs> <http://a/b/c/g#s/../x> .
+<http://a/.g> <http://www.w3.org/2002/07/owl#sameAs> <http://a/.g> .
 <http://A?aquery> <http://www.w3.org/2002/07/owl#sameAs> <http://A?aquery> .
 <http://A#afragment> <http://www.w3.org/2002/07/owl#sameAs> <http://A#afragment> .
 <http://a/b/c/d;p?aquery> <http://www.w3.org/2002/07/owl#sameAs> <http://a/b/c/d;p?aquery> .
