@@ -29,7 +29,29 @@
 <../../>  owl:sameAs <http://a/> .
 <../../g> owl:sameAs <http://a/g> .
 
+# 5.4.2. Abnormal Examples
+<../../../g>    owl:sameAs <http://a/g> .
+<../../../../g> owl:sameAs <http://a/g> .
+</./g>          owl:sameAs <http://a/g> .
+</../g>         owl:sameAs <http://a/g> .
+<g.>            owl:sameAs <http://a/b/c/g.> .
+<.g>            owl:sameAs <http://a/b/c/.g> .
+<g..>           owl:sameAs <http://a/b/c/g..> .
+<..g>           owl:sameAs <http://a/b/c/..g> .
+<./../g>        owl:sameAs <http://a/b/g> .
+# Serd only resolves the leading components
+#<./g/.>         owl:sameAs <http://a/b/c/g/> .
+#<g/./h>         owl:sameAs <http://a/b/c/g/h> .
+#<g/../h>        owl:sameAs <http://a/b/c/h> .
+#<g;x=1/./y>     owl:sameAs <http://a/b/c/g;x=1/y> .
+#<g;x=1/../y>    owl:sameAs <http://a/b/c/y> .
+<g?y/./x>       owl:sameAs <http://a/b/c/g?y/./x> .
+<g?y/../x>      owl:sameAs <http://a/b/c/g?y/../x> .
+<g#s/./x>       owl:sameAs <http://a/b/c/g#s/./x> .
+<g#s/../x>      owl:sameAs <http://a/b/c/g#s/../x> .
+      
 # Additional tests for Serd
+</.g>                owl:sameAs <http://a/.g> . 
 <http://A?aquery>    owl:sameAs <http://A?aquery> .
 <http://A#afragment> owl:sameAs <http://A#afragment> .
 <?aquery>            owl:sameAs <http://a/b/c/d;p?aquery> .
@@ -41,4 +63,4 @@
 
 @base <http://C#cfragment> .
 
-</bar>       owl:sameAs <http://C/bar> .
+</bar> owl:sameAs <http://C/bar> .
